# Betting-tool-Saas

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose-ecs.yml  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
transfermarkt-api/: .dockerignore  Dockerfile  main.py  odds_data.json  pyproject.toml  requirements.txt
transfermarkt-api/app/: odds_data.json  settings.py
transfermarkt-api/app/api/: api.py
transfermarkt-api/app/api/endpoints/: arbitrage.py  clubs.py  odds.py  predictions.py
transfermarkt-api/app/core/: auth.py  config.py  lemon_squeezy.py  shared_dependencies.py
transfermarkt-api/app/data/leagues/belgium/: B1(3).csv
transfermarkt-api/app/data/leagues/bundesliga2/: D2(5).csv
transfermarkt-api/app/data/leagues/championship england/: E1(8).csv
transfermarkt-api/app/data/leagues/eredevise/: N1(3).csv
transfermarkt-api/app/models/: database.py  loader.py  odds_models.py  predictions.py  sport.py  users.py
transfermarkt-api/app/services/arbitrage/: api_logic.py
transfermarkt-api/app/services/dixon_coles/: README.md  __init__.py  dixon_coles_service.py  test_service.py
transfermarkt-api/app/services/flashscore_scraper/: __init__.py  flashscore_scraper.py  scraper_factory.py  tennis_scraper.py
transfermarkt-api/app/services/odds_api/: odds_api_client.py
transfermarkt-api/app/services/odds_tracker/: odds_scheduler.py  odds_tracker.py  snapshot_persistence.py
transfermarkt-api/tests/odds/: test_odds_api_client.py  test_sharp_snapshot_integration.py  test_snapshot_persistence.py  test_summary_fallback.py
(+72 files in other folders)
