[tool.poetry]
name = "transfermarkt-api"
version = "0.1.0"
description = "API for transfermarkt.com"
authors = ["Ayoub ennaoui"]


[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"
openai = "^1.58.1"
deepseek = "^0.0.1.dev0"
python-dotenv = "^1.0.1"
httpx = "0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.4.0"
fastapi-auth0 = "^0.5.0"
pyjwt = "^2.10.1"
firebase-admin = "^6.6.0"
fuzzywuzzy = "^0.18.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
selenium = "4.26.1"
slowapi = "^0.1.9"
boto3 = "^1.42.62"
email-validator = "^2.3.0"
shin = "^0.2.2"
pydantic-settings = "^2.13.1"
apscheduler = "^3.11.2"
bs4 = "^0.0.2"
lxml = "^6.0.2"
pandas = "^3.0.1"
scipy = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
